Correct bug button not centered and add clic on page to close menu

--- a/static/style.css
+++ b/static/style.css
@@ -137,7 +137,7 @@ body {
 /* Media Query for screens below 1400px & 768px (burger layout) */
 @media (max-width: 1400px), (max-width: 768px) {
   #menuToggle {
-    display: block;
+    display: flex;
     position: fixed;
     top: 15px;
     left: 15px;
@@ -151,6 +151,8 @@ body {
     font-size: 20px;
     cursor: pointer;
     transition: background-color 0.3s;
+    align-items: center;
+    justify-content: center;
   }
   #menuToggle:hover {
     background-color: var(--button-default-hover);
@@ -163,8 +165,26 @@ body {
     transform: translateX(0);
     visibility: visible;
   }
+  /* Pour le bouton de fermeture dans la sidebar */
   .sidebar.active #menuClose {
-    display: block;
+    display: flex;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--button-default-bg);
+    color: var(--button-default-text);
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    align-items: center;
+    justify-content: center;
+  }
+  .sidebar.active #menuClose:hover {
+    background-color: var(--button-default-hover);
   }
 }
 
